--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,8 +10,8 @@ import AuthLayout from '../layouts/AuthLayout.astro';
       <p class="error-404-text">
         Spiacenti, la pagina che stai cercando non esiste o è stata spostata.
       </p>
-      <a href="/page-pratiche" class="btn">
-        <span class="btn-text">Torna alle Pratiche</span>
+      <a href="/dashboard" class="btn">
+        <span class="btn-text">Torna alla Dashboard</span>
       </a>
     </section>
   </div>
