--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,4 @@
 ---
-// Redirect to pratiche page as default
-return Astro.redirect('/page-pratiche');
+// Redirect to dashboard as default
+return Astro.redirect('/dashboard');
 ---
