--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -8,7 +8,7 @@ if (sessionCookie) {
 }
 ---
 
-<LoginLayout title="Accesso - AI Legal Assistant">
+<LoginLayout title="Accesso - Gestionale">
   <style is:global>
     body {
       display: flex;
