--- a/src/pages/access-denied.astro
+++ b/src/pages/access-denied.astro
@@ -2,7 +2,7 @@
 import AuthLayout from '../layouts/AuthLayout.astro';
 ---
 
-<AuthLayout title="Accesso Negato - AI Legal Assistant">
+<AuthLayout title="Accesso Negato">
   <div class="container">
     <div class="access-denied-container">
       <div class="access-denied-icon">
