--- a/src/pages/anagrafica-clienti.astro
+++ b/src/pages/anagrafica-clienti.astro
@@ -2,7 +2,7 @@
 import AuthLayout from '../layouts/AuthLayout.astro';
 ---
 
-<AuthLayout title="Clienti - AI Legal Assistant">
+<AuthLayout title="Clienti">
   <div class="container">
     <div class="header">
         <h1>Clienti</h1>
