--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -8,7 +8,7 @@ if (sessionCookie) {
 }
 ---
 
-<LoginLayout title="Accesso - Gestionale">
+<LoginLayout title="Accesso">
   <style is:global>
     body {
       display: flex;
@@ -174,7 +174,7 @@ if (sessionCookie) {
 
   <div class="login-container">
     <div class="login-box">
-      <h1>AI Legal Assistant</h1>
+      <h1>Login</h1>
       <p class="subtitle">Accedi al tuo account</p>
       <form id="login-form">
         <div class="form-group">
