--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -27,7 +27,7 @@ const { user } = Astro.locals;
         <div class="card-content">
           <h3>Utenti</h3>
           <p>Gestisci gli utenti del sistema</p>
-          <a href="/anagrafica-utenti" class="card-link">Vai alla gestione</a>
+          <a href="/users" class="card-link">Vai alla gestione</a>
         </div>
       </div>
 
@@ -55,7 +55,7 @@ const { user } = Astro.locals;
         <div class="card-content">
           <h3>Configurazioni</h3>
           <p>Configura SMTP e AI</p>
-          <a href="/config-smtp" class="card-link">Vai alle configurazioni</a>
+          <a href="/settings-smtp" class="card-link">Vai alle configurazioni</a>
         </div>
       </div>
 
